# metabuddy

./: .SRCINFO  CMakeLists.txt  PKGBUILD  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  tagio.cpp  tagio.h
